# ragnar

./: .gitignore  README.md
matron/: pyproject.toml
matron/.matron/: letta_agents.json
matron/adapters/: README.md
matron/docs/: architecture.md  graphiti_memory.md  letta_agents.md  roadmap.md  vector_memory.md
matron/roles/: matron_roles.yaml
matron/src/matron_core/: __init__.py  approval_broker.py  cli.py  graphiti_memory.py  letta_provisioner.py  memory_bootstrap.py  rag_memory.py
ragnar/: .gitignore  pyproject.toml  ragnar.yaml
ragnar/.ragnar/: letta_agents.json
ragnar/adapters/: README.md
ragnar/core/: README.md
ragnar/docs/: architecture.md  graphiti_memory.md  letta_agents.md  orchestration.md  roadmap.md  vector_memory.md
ragnar/roles/: ragnar_roles.yaml
ragnar/src/ragnar_core/: __init__.py  agent_transcripts.py  approval_store.py  approvals_cli.py  chat.py  cli.py  conductor_decision.py  config.py  context_broker.py  context_memory.py  contracts.py  edit_adapter.py  execution.py  execution_profiles.py  graphiti_memory.py  intent_analyzer.py  letta_provisioner.py  memory_bootstrap.py  memory_writeback.py  observability.py  orchestrator.py  pr_adapter.py  project_profiler.py  rag_memory.py  role_registry.py  role_runtime.py  run_ledger.py  workspace.py  workspace_cli.py
ragnar/tests/: conftest.py  test_orchestrator.py
