[project]
name = "matron-core"
version = "0.1.0"
description = "Governed role-based AI delivery crew foundation"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "letta-client>=1.7.12",
  "fastembed>=0.7.0",
  "psycopg[binary]>=3.2.0",
  "mcp>=1.12.0",
]

[project.scripts]
matron-roles = "matron_core.cli:main"
matron-provision-letta = "matron_core.letta_provisioner:main"
matron-bootstrap-memory = "matron_core.memory_bootstrap:main"
matron-rag-memory = "matron_core.rag_memory:main"
matron-graphiti-memory = "matron_core.graphiti_memory:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
