[project]
name = "ragnar-core"
version = "0.1.0"
description = "Governed role-based AI delivery crew foundation"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "letta-client>=1.7.12",
  "fastembed>=0.7.0",
  "psycopg[binary]>=3.2.0",
  "mcp>=1.12.0",
]

[project.scripts]
ragnar-roles = "ragnar_core.cli:main"
ragnar-provision-letta = "ragnar_core.letta_provisioner:main"
ragnar-bootstrap-memory = "ragnar_core.memory_bootstrap:main"
ragnar-rag-memory = "ragnar_core.rag_memory:main"
ragnar-graphiti-memory = "ragnar_core.graphiti_memory:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
