[project]
name = "ragnar-core"
version = "0.1.0"
description = "Governed role-based AI delivery crew foundation"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "letta-client>=1.7.12",
  "fastembed>=0.7.0",
  "psycopg[binary]>=3.2.0",
  "mcp>=1.12.0",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=3.1.0",
]

[project.scripts]
ragnar-roles = "ragnar_core.cli:main"
ragnar-provision-letta = "ragnar_core.letta_provisioner:main"
ragnar-bootstrap-memory = "ragnar_core.memory_bootstrap:main"
ragnar-rag-memory = "ragnar_core.rag_memory:main"
ragnar-graphiti-memory = "ragnar_core.graphiti_memory:main"
ragnar-orchestrate = "ragnar_core.orchestrator:main"
ragnar-approval = "ragnar_core.approvals_cli:main"
ragnar-workspace = "ragnar_core.workspace_cli:main"
ragnar-config = "ragnar_core.config:main"
ragnar-edit = "ragnar_core.edit_adapter:main"
ragnar-memory-writebacks = "ragnar_core.memory_writeback:main"
ragnar-agent-transcripts = "ragnar_core.agent_transcripts:main"
ragnar-pr-draft = "ragnar_core.pr_adapter:main"
ragnar-chat = "ragnar_core.chat:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
